--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Cinzel', serif;
-            background-color: #000;
+            background-color: #0d0d0d;
             color: #fff;
             display: flex;
             justify-content: center;
@@ -21,7 +21,7 @@
             background-color: #111;
             padding: 40px;
             border-radius: 10px;
-            box-shadow: 0 0 20px rgba(255,0,0,0.5);
+            box-shadow: 0 0 20px rgba(178,34,34,0.5);
             max-width: 400px;
             width: 100%;
             border: 2px solid #800000;
@@ -30,11 +30,11 @@
             width: 100px;
             height: 100px;
             border-radius: 50%;
-            border: 3px solid #ff0000;
+            border: 3px solid #b22222;
             margin-bottom: 20px;
         }
         h1 {
-            color: #ff0000;
+            color: #b22222;
             margin-bottom: 10px;
             font-size: 2em;
         }
@@ -51,12 +51,12 @@
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
-            border: 1px solid #ff0000;
+            border: 1px solid #b22222;
             transition: background-color 0.3s, color 0.3s;
             font-size: 1.1em;
         }
         .link:hover {
-            background-color: #ff0000;
+            background-color: #b22222;
             color: #000;
         }
     </style>
@@ -64,11 +64,11 @@
 <body>
     <div class="container">
         <img src="propic.jpeg" alt="Profile Image" class="profile-img">
-        <h1>Gory-git</h1>
-        <p class="subtitle">Your goth link hub</p>
+        <h1>UCCS</h1>
+        <p class="subtitle">Explore all my links💦</p>
         <a href="https://github.com/Gory-git" class="link">🖤 GitHub</a>
         <a href="https://www.instagram.com/gregorio.voci" class="link">💀 Instagram</a>
-        <a href="https://www.youtube.com/watch?v=v24sAklMMiE" class="link">💙🤍 OnlyFans</a>
+        <a href="videoplayback.mp4" target="_blank" class="link">💙🤍 OnlyFans</a>
     </div>
 </body>
 </html>
