--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p class="subtitle">Explore all my links💦</p>
         <a href="https://github.com/Gory-git" class="link">🖤 GitHub</a>
         <a href="https://www.instagram.com/gregorio.voci" class="link">💀 Instagram</a>
-        <a href="videoplayback.mp4" target="_blank" class="link">💙🤍 OnlyFans</a>
+        <a href="videoplayback.mp4" target="_blank" class="link">💙🤍 OF</a>
     </div>
 </body>
 </html>
